--- a/themes/WebStack-Hugo/layouts/partials/content_search.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_search.html
@@ -10,7 +10,7 @@
                         <label for="type-whois"   data-id="group-c"><span>工具</span></label>
                         <label for="type-zhihu"   data-id="group-d"><span>社区</span></label>
                         <label for="type-taobao1" data-id="group-e"><span>生活</span></label>
-                        <label for="type-zhaopin" data-id="group-f"><span>求职</span></label>
+                        <label for="type-zhaopin" data-id="group-f"><span>翻译</span></label>
                     </div>
                 </div>
             </div>
@@ -206,10 +206,10 @@
                 <div class="search-group group-f">
                     <ul class="search-type">
                         <li><input hidden="" type="radio" name="type" 
-                                id="type-zhaopin" 
-                                value="https://sou.zhaopin.com/jobs/searchresult.ashx?kw=" 
-                                data-placeholder="智联招聘">
-                            <label for="zhaopin"><span class="text-muted">智联招聘</span></label>
+                                id="type-deepl" 
+                                value="https://www.deepl.com/zh/translator" 
+                                data-placeholder="deepl">
+                            <label for="deepl"><span class="text-muted">Deepl</span></label>
                         </li>
                         <li><input hidden="" type="radio" name="type" 
                                 id="type-51job" 
