--- a/themes/WebStack-Hugo/layouts/partials/content_search.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_search.html
@@ -207,9 +207,9 @@
                     <ul class="search-type">
                         <li><input hidden="" type="radio" name="type" 
                                 id="type-deepl" 
-                                value="https://www.deepl.com/zh/translator" 
-                                data-placeholder="deepl">
-                            <label for="deepl"><span class="text-muted">Deepl</span></label>
+                                value="https://www.deepl.com/zh/translator#zh/en-us/" 
+                                data-placeholder="deepL">
+                            <label for="deepl"><span class="text-muted">DeepL</span></label>
                         </li>
                         <li><input hidden="" type="radio" name="type" 
                                 id="type-51job" 
