--- a/themes/WebStack-Hugo/layouts/partials/content_search.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_search.html
@@ -208,14 +208,14 @@
                         <li><input hidden="" type="radio" name="type" 
                                 id="type-deepl" 
                                 value="https://www.deepl.com/zh/translator#zh/en-us/" 
-                                data-placeholder="deepL">
+                                data-placeholder="使用deepL翻译">
                             <label for="deepl"><span class="text-muted">DeepL</span></label>
                         </li>
                         <li><input hidden="" type="radio" name="type" 
-                                id="type-51job" 
-                                value="https://search.51job.com/?" 
-                                data-placeholder="前程无忧">
-                            <label for="type-51job"><span class="text-muted">前程无忧</span></label>
+                                id="type-google" 
+                                value="https://translate.google.com/?hl=zh-CN&sl=auto&tl=en&text=" 
+                                data-placeholder="使用Google翻译">
+                            <label for="type-google"><span class="text-muted">Google</span></label>
                         </li>
                         <li><input hidden="" type="radio" name="type" 
                                 id="type-lagou" 
