--- a/themes/WebStack-Hugo/layouts/partials/content_search.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_search.html
@@ -212,7 +212,7 @@
                             <label for="deepl"><span class="text-muted">DeepL</span></label>
                         </li>
                         <li><input hidden="" type="radio" name="type" 
-                                id="type-google" 
+                                id="type-google1" 
                                 value="https://translate.google.com/?hl=zh-CN&sl=auto&tl=en&text=" 
                                 data-placeholder="使用Google翻译">
                             <label for="type-google"><span class="text-muted">Google</span></label>
