--- a/themes/WebStack-Hugo/layouts/partials/content_search.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_search.html
@@ -10,7 +10,7 @@
                         <label for="type-whois"   data-id="group-c"><span>工具</span></label>
                         <label for="type-zhihu"   data-id="group-d"><span>社区</span></label>
                         <label for="type-taobao1" data-id="group-e"><span>生活</span></label>
-                        <label for="type-deepl" data-id="group-f"><span>翻译</span></label>
+                        <label for="type-zhaopin" data-id="group-f"><span>求职</span></label>
                     </div>
                 </div>
             </div>
@@ -206,16 +206,16 @@
                 <div class="search-group group-f">
                     <ul class="search-type">
                         <li><input hidden="" type="radio" name="type" 
-                                id="type-deepl" 
-                                value="https://www.deepl.com/zh/translator#zh/en-us/" 
-                                data-placeholder="使用deepL翻译">
-                            <label for="deepl"><span class="text-muted">DeepL</span></label>
+                                id="type-zhaopin" 
+                                value="https://sou.zhaopin.com/jobs/searchresult.ashx?kw=" 
+                                data-placeholder="智联招聘">
+                            <label for="zhaopin"><span class="text-muted">智联招聘</span></label>
                         </li>
                         <li><input hidden="" type="radio" name="type" 
-                                id="type-google1" 
-                                value="https://translate.google.com/?hl=zh-CN&sl=auto&tl=en&text=" 
-                                data-placeholder="使用Google翻译">
-                            <label for="type-google"><span class="text-muted">Google</span></label>
+                                id="type-51job" 
+                                value="https://search.51job.com/?" 
+                                data-placeholder="前程无忧">
+                            <label for="type-51job"><span class="text-muted">前程无忧</span></label>
                         </li>
                         <li><input hidden="" type="radio" name="type" 
                                 id="type-lagou" 
